force-app/main/default/objects/FinanceAccount__c/FinanceAccount__c.object-meta.xml
<CustomObject>
    <label>Finance Account</label>
    <nameField>
        <label>Finance Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Account</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>