force-app/main/default/objects/FinanceAccount__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Finance Account</relationshipLabel>
    <relationshipName>FinanceAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>