force-app/main/default/objects/FinanceAccount__c/fields/FinanceAccountNr__c.field-meta.xml
<CustomField>
    <fullName>FinanceAccountNr__c</fullName>
    <label>Finance Account Nr.</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>