force-app/main/default/objects/FinanceAccount__c/fields/FinanceClearingNr__c.field-meta.xml
<CustomField>
    <fullName>FinanceClearingNr__c</fullName>
    <label>Finance Clearing Nr.</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>