force-app/main/default/objects/FinanceAccount__c/fields/TypeName2__c.field-meta.xml
<CustomField>
    <fullName>TypeName2__c</fullName>
    <label>Type Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>