force-app/main/default/objects/FinanceAccount__c/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <label>Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>