force-app/main/default/objects/FinanceAccount__c/fields/ZImportId__c.field-meta.xml
<CustomField>
    <fullName>ZImportId__c</fullName>
    <externalId>true</externalId>
    <label>ZImportId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>