force-app/main/default/objects/FinanceAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CostCenter__c</columns>
    <columns>FinanceAccountNr__c</columns>
    <columns>FinanceClearingNr__c</columns>
    <columns>TypeName__c</columns>
    <columns>TypeName2__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>